<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddingNewRecipe"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:padding="10dp">

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="316dp"
                android:layout_height="46dp"
                android:ems="10"
                android:hint="@string/new_recipe_name"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:autofillHints="" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/new_recipe_ingredients"
                android:textAlignment="viewStart" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="314dp"
                android:layout_height="110dp"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:gravity="start|top"
                android:hint="@string/new_recipe_description"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_recipe_macro"
                android:layout_marginTop="15dp"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvKcal"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/new_recipe_kcal" />

                    <TextView
                        android:id="@+id/tvKcal2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvProteins"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/new_recipe_proteins" />

                    <TextView
                        android:id="@+id/tvProteins2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvCarbo"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/new_recipe_carbo" />

                    <TextView
                        android:id="@+id/tvCarbo2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvFat"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/new_recipe_fats" />

                    <TextView
                        android:id="@+id/tvFats2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/tvMealCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/new_recipe_cost" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="Minimum"/>

                    <TextView
                        android:id="@+id/textView18"
                        android:textAlignment="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Average"/>

                    <TextView
                        android:id="@+id/textView19"
                        android:textAlignment="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Maximum"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/tvMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/tvAverage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/tvMax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center" />
                </TableRow>

            </TableLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>